tests/miniJava/pos/001255_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( new java ( ) ) java [ 0 ] = 0 ; } }
