tests/miniJava/neg/001122_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new java class java { public static void Main ( String [ ] java ) { { } } } ( ) ; } }
